<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QCMActivity">

    <Button
        android:id="@+id/QCM_button_retour"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/QCM_button_text_retour"
        app:icon="@drawable/baseline_arrow_back_24" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/QCM_text_choisir"
            android:textAlignment="center"
            android:textSize="23sp"
            android:layout_marginBottom="20dp"/>

        <RadioGroup
            android:id="@+id/QCM_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <RadioButton
                android:id="@+id/QCM_radio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/QCM_radio1" />

            <RadioButton
                android:id="@+id/QCM_radio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/QCM_radio2" />

            <RadioButton
                android:id="@+id/QCM_radio3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/QCM_radio3" />
        </RadioGroup>

        <Button
            android:id="@+id/QCM_button_suivant"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonTableValider"
            app:icon="@drawable/baseline_check_24" />

    </LinearLayout>
</RelativeLayout>