<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultatActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Result_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/Result_text_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Result_text_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/Result_text_title"
            android:textSize="40sp" />


        <TextView
            android:id="@+id/Result_text_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/Result_text_nbOk" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/Result_btn_recommencer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Result_btn_recommencer"
            />

        <Button
            android:id="@+id/Result_btn_retour_exo"
            style="@style/Widget.Material3.Button.TonalButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Result_btn_retour_exo"
            app:icon="@drawable/baseline_edit_document_24" />

        <Button
            android:id="@+id/Result_btn_retour_comptes"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Result_btn_retour_comptes"
            app:icon="@drawable/baseline_person_24" />
    </LinearLayout>
</RelativeLayout>