<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".QCMReponsesActivity">

    <TextView
        android:id="@+id/QCM_reponses_progression"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/QCM_reponses_progression_text"
        android:textAlignment="center"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/QCM_reponses_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/QCM_reponses_question"
        android:textAlignment="center"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/QCM_reponses_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
    </RadioGroup>

    <Button
        android:id="@+id/QCM_reponses_btn_suivant"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/QCM_reponses_btn_suivant"
        app:icon="@drawable/baseline_check_24" />

    <TextView
        android:id="@+id/QCM_reponses_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/QCM_reponses_error"
        android:textColor="@color/design_default_color_error"
        android:textSize="16sp"
        android:visibility="gone"/>


</LinearLayout>