<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ListeExoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Liste_text_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/List_text_user"
            android:textSize="24sp" />

        <Button
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:id="@+id/List_btn_retour"
            app:icon="@drawable/baseline_logout_24" />

    </RelativeLayout>

    <TextView
        android:id="@+id/Liste_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/List_text"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:id="@+id/List_btn_multiplication"
            android:text="@string/List_btn_TableDeMult"
            app:icon="@drawable/baseline_calculate_24" />

        <Button
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:id="@+id/List_btn_addition"
            android:text="@string/List_btn_TableDadd"
            app:icon="@drawable/baseline_calculate_24" />

        <Button
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:id="@+id/List_btn_qcm"
            android:text="@string/List_btn_QCM"
            app:icon="@drawable/baseline_checklist_rtl_24" />

    </LinearLayout>
</LinearLayout>