<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Creation_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreationDeCompteActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/Creation_title"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Creation_input_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/Creation_nom_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="25" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Creation_input_prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Creation_prenom_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="25" />


        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Creation_button_retour"
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/Creation_button_text_retour"
                app:icon="@drawable/baseline_arrow_back_24" />

            <Button
                android:id="@+id/Creation_button_ok"
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Creation_button_text"
                app:icon="@drawable/baseline_add_24" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>