<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableDeMultiplicationActivity">

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Creation_button_text_retour"
        android:id="@+id/Table_mult_button_retour"
        android:layout_margin="20dp"
        app:icon="@drawable/baseline_arrow_back_24"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tableText"
            android:textSize="25dp"/>

        <NumberPicker
            android:id="@+id/Table_mult_nbPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:id="@+id/Table_mult_btnTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonTableValider"
            app:icon="@drawable/baseline_check_24"
            />

    </LinearLayout>

</RelativeLayout>