<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Table_mult_layout"
    tools:context=".TableDeMultiplicationReponsesActivity">

    <RelativeLayout
        android:id="@+id/R_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/Table_mult_retour_btn"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/Table_add_retour_btn_text"
            app:icon="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/Table_mult_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:text="@string/Table_add_timer"
            android:textSize="16sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/R_layout"
        android:layout_marginStart="50dp">

        <LinearLayout
            android:id="@+id/Table_mult_res_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/Table_mult_res_btn"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Table_mult_res_btn_text"
        app:icon="@drawable/baseline_check_24" />

</RelativeLayout>